background change and add buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,20 @@
 <head>
     <title>MADAM WEB MONITOR</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style>
+        body {
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
+
+
+<button>Login Page</button>
 <a th:href="@{/login}">Login Page</a><br>
+<button>Register New User</button>
 <a th:href="@{/register}">Register New User</a>
+
 
 </body>
 </html>
