--- a/src/main/resources/templates/mymadam.html
+++ b/src/main/resources/templates/mymadam.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>YOUR ACCOUNT</title>
+    <title>YOUR Account</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<button>logout</button>
+<a th:href="@{/logout}">logout</a><br>
 This will be page where we set trackers...
 </body>
 </html>
