add tracker method : downloadWebpage, waitTime, sendEmail etc.

--- a/src/main/resources/templates/mymadam.html
+++ b/src/main/resources/templates/mymadam.html
@@ -15,6 +15,7 @@
         <label>Frequency</label>
         <select class="form-control" th:field="*{frequency}">
             <option value="">Choose...</option>
+            <option value=1>1min</option>
             <option value=5>5min</option>
             <option value=15>15min</option>
             <option value=30>30min</option>
